# Archipelago-Organizer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  asdf
manual/: download_game_and_proton.sh  run_proton.sh
src/: main.cpp  main.h  mainwindow.cpp  mainwindow.h
src/datastore/: database.cpp  database.h  protonDiskGame.h  steamGame.h
src/datastore/games/: datatypes.cpp  datatypes.h
src/frontend/games/: gameListWidget.cpp  gameListWidget.h  gametabwidget.cpp  gametabwidget.h  registeredgameswidget.cpp  registeredgameswidget.h  steamlibrarieswidget.cpp  steamlibrarieswidget.h  yamlconfigswidget.cpp  yamlconfigswidget.h
src/games/ADOFAI/: config.cpp  config.h
src/logic/: mounts.cpp  mounts.h  proton.cpp  proton.h  sandbox.cpp  sandbox.h  util.cpp  util.h
